--- a/app/src/main/res/drawable/bg_rectangle_stroke_p.xml
+++ b/app/src/main/res/drawable/bg_rectangle_stroke_p.xml
@@ -4,6 +4,8 @@
 
     <corners android:radius="8dp" />
 
+    <solid android:color="@android:color/transparent" />
+
     <stroke
         android:width="1dp"
         android:color="@color/nutrition_protein_bg" />
