--- a/app/src/main/res/layout/card_recipe_nutrition.xml
+++ b/app/src/main/res/layout/card_recipe_nutrition.xml
@@ -40,7 +40,7 @@
             app:layout_constraintTop_toTopOf="@+id/card_recipe_nutrition_quantity_switch"
             tools:ignore="RtlHardcoded" />
 
-        <Switch
+        <android.support.v7.widget.SwitchCompat
             android:id="@+id/card_recipe_nutrition_quantity_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
