--- a/app/src/main/res/layout/card_recipe_nutrition.xml
+++ b/app/src/main/res/layout/card_recipe_nutrition.xml
@@ -26,42 +26,35 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/card_recipe_nutrition_quantity_switch_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="0dp"
-            android:text="@string/nutrition_quantity_switch"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            app:layout_constraintBottom_toBottomOf="@+id/card_recipe_nutrition_quantity_switch"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/card_recipe_nutrition_quantity_switch"
-            tools:ignore="RtlHardcoded" />
-
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/card_recipe_nutrition_quantity_switch"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="0dp"
             android:checked="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="?android:attr/textColorSecondary"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/card_recipe_nutrition_title"
-            tools:ignore="RtlHardcoded" />
+            tools:ignore="RtlHardcoded"
+            tools:text="Per 100 gram" />
 
         <View
             android:id="@+id/card_recipe_nutrition_title_divider"
             android:layout_width="0dp"
             android:layout_height="1dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:background="@color/gray_100"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_recipe_nutrition_quantity_switch_text" />
+            app:layout_constraintTop_toBottomOf="@+id/card_recipe_nutrition_quantity_switch" />
 
         <android.support.percent.PercentFrameLayout
             android:id="@+id/recipe_detail_main_chart_container"
@@ -69,7 +62,7 @@
             android:layout_height="wrap_content"
             android:padding="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card_recipe_nutrition_title_divider">
+            app:layout_constraintTop_toBottomOf="@+id/card_recipe_nutrition_title_divider">
 
             <include
                 layout="@layout/view_nutrition_circle_chart"
