--- a/app/src/main/res/layout/activity_recipe_tab.xml
+++ b/app/src/main/res/layout/activity_recipe_tab.xml
@@ -4,38 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:contextRef="com.alsash.reciper.ui.activity.RecipeListActivity">
+    tools:context="com.alsash.reciper.ui.activity.RecipeTabActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/activity_recipe_list_appbar"
+        android:id="@+id/activity_recipe_tab_appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="8dp"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/activity_recipe_list_toolbar"
+            android:id="@+id/activity_recipe_tab_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+        </android.support.v7.widget.Toolbar>
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/activity_recipe_tab_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </android.support.design.widget.AppBarLayout>
 
-    <fragment
-        android:id="@+id/activity_recipe_list_fragment"
-        android:name="com.alsash.reciper.ui.fragment.RecipeListFragment"
+    <com.alsash.reciper.ui.view.MotionEventViewPager
+        android:id="@+id/activity_recipe_tab_pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:layout="@layout/view_list" />
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/activity_recipe_list_fab"
+        android:id="@+id/activity_recipe_tab_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
-        android:tint="@color/white"
         app:srcCompat="@drawable/ic_add" />
 
 </android.support.design.widget.CoordinatorLayout>
