--- a/app/src/main/res/menu/menu_drawer_base_nav.xml
+++ b/app/src/main/res/menu/menu_drawer_base_nav.xml
@@ -32,7 +32,7 @@
             android:title="@string/drawer_menu_labels" />
         <item
             android:id="@+id/drawer_category"
-            android:icon="@drawable/ic_recipe_category"
+            android:icon="@drawable/ic_category"
             android:title="@string/drawer_menu_categories" />
     </group>
 
