--- a/app/src/main/res/menu/recipe_group.xml
+++ b/app/src/main/res/menu/recipe_group.xml
@@ -11,7 +11,7 @@
         android:title="@string/recipe_group_label" />
     <item
         android:id="@+id/group_category"
-        android:icon="@drawable/ic_recipe_category"
+        android:icon="@drawable/ic_category"
         android:title="@string/recipe_group_category" />
     <item
         android:id="@+id/group_food"
