Update Recipe Tabs

--- a/app/src/main/res/layout/activity_recipe_tab.xml
+++ b/app/src/main/res/layout/activity_recipe_tab.xml
@@ -34,7 +34,8 @@
         android:id="@+id/activity_recipe_tab_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:svp_is_swipe_enabled="false" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/activity_recipe_tab_fab"
