Update Recipe Tabs

--- a/app/src/main/res/menu/menu_drawer_base_nav.xml
+++ b/app/src/main/res/menu/menu_drawer_base_nav.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group
-        android:id="@+id/drawer_group_recipe"
-        android:checkableBehavior="single">
-        <item
-            android:id="@+id/drawer_recipe_list"
-            android:icon="@drawable/ic_recipe"
-            android:title="@string/drawer_menu_recipes" />
 
+    <item
+        android:id="@+id/drawer_base_nav_root_recipe"
+        android:title="@string/drawer_base_nav_root_recipe">
         <item
-            android:id="@+id/drawer_food"
-            android:icon="@drawable/ic_food"
-            android:title="@string/drawer_menu_foods" />
-    </group>
+            android:id="@+id/drawer_base_nav_recipe_all"
+            android:icon="@drawable/ic_recipe"
+            android:title="@string/drawer_base_nav_recipe_all" />
+        <item
+            android:id="@+id/drawer_base_nav_recipe_favorite"
+            android:icon="@drawable/ic_favorite"
+            android:title="@string/drawer_base_nav_recipe_favorite" />
+    </item>
 
     <group
         android:id="@+id/drawer_group_cart"
