--- a/app/src/main/res/menu/toolbar_recipe_list.xml
+++ b/app/src/main/res/menu/toolbar_recipe_list.xml
@@ -18,7 +18,7 @@
                 <item
                     android:id="@+id/group_all"
                     android:icon="@drawable/ic_clear"
-                    android:title="@string/recipe_group_all" />
+                    android:title="@string/recipe_group_list" />
                 <item
                     android:id="@+id/group_label"
                     android:icon="@drawable/ic_label"
