--- a/app/src/main/res/layout/activity_tab_base.xml
+++ b/app/src/main/res/layout/activity_tab_base.xml
@@ -23,7 +23,8 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/activity_tab_tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:tabIndicatorColor="@color/white" />
 
     </android.support.design.widget.AppBarLayout>
 
