--- a/app/src/main/res/layout/activity_tab_base.xml
+++ b/app/src/main/res/layout/activity_tab_base.xml
@@ -28,7 +28,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <com.alsash.reciper.view.xmlview.SwipeViewPager
+    <com.alsash.reciper.view.xml.SwipeViewPager
         android:id="@+id/activity_tab_svp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
