--- a/app/src/main/res/menu/menu_recipe_detail.xml
+++ b/app/src/main/res/menu/menu_recipe_detail.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:contextRef="com.alsash.reciper.view.activity.RecipeDetailActivity">
+    tools:contextRef="com.alsash.reciper.ui.activity.RecipeDetailActivity">
     <item
         android:id="@+id/menu_recipe_detail_edit"
         android:icon="@drawable/ic_edit"
