--- a/app/src/main/res/layout/activity_base_drawer.xml
+++ b/app/src/main/res/layout/activity_base_drawer.xml
@@ -2,7 +2,7 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_drawer_base_layout"
+    android:id="@+id/base_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -12,13 +12,13 @@
     <!--CoordinatorLayout used instead of FrameLayout or other ViewGroup inheritor -->
     <!--This ensures the fitsSystemWindows="true" gets passed onto the inflated child views.-->
     <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/activity_drawer_base_view_group"
+        android:id="@+id/base_drawer_view_group"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true" />
 
     <android.support.design.widget.NavigationView
-        android:id="@+id/activity_drawer_base_nav"
+        android:id="@+id/base_drawer_nav"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
