--- a/app/src/main/res/layout/activity_base_swipe_tab.xml
+++ b/app/src/main/res/layout/activity_base_swipe_tab.xml
@@ -2,18 +2,19 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/base_swipe_tab_coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.BaseSwipeTabActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/activity_tab_appbar"
+        android:id="@+id/base_swipe_tab_appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/activity_tab_toolbar"
+            android:id="@+id/base_swipe_tab_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -23,7 +24,7 @@
         </android.support.v7.widget.Toolbar>
 
         <android.support.design.widget.TabLayout
-            android:id="@+id/activity_tab_tabs"
+            android:id="@+id/base_swipe_tab_tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabGravity="fill"
@@ -33,14 +34,14 @@
     </android.support.design.widget.AppBarLayout>
 
     <com.alsash.reciper.ui.view.SwipeViewPager
-        android:id="@+id/activity_tab_svp"
+        android:id="@+id/base_swipe_tab_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:svp_is_swipe_enabled="false" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/activity_tab_fab"
+        android:id="@+id/base_swipe_tab_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
