--- a/app/src/main/res/layout/fragment_list_refresh.xml
+++ b/app/src/main/res/layout/fragment_list_refresh.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/list_refresh_indicator"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <!-- Loading indicator without swipe-to-refresh -->
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/list_refresh_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_refresh_rv"
@@ -12,4 +17,4 @@
         android:scrollbars="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-</android.support.v4.widget.SwipeRefreshLayout>
+</FrameLayout>
