--- a/app/src/main/res/layout/view_list_group.xml
+++ b/app/src/main/res/layout/view_list_group.xml
@@ -24,4 +24,11 @@
         android:scrollbars="none"
         app:layoutManager="LinearLayoutManager" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true" />
+
 </LinearLayout>
