Update ui - add bottom navigation

--- a/app/src/main/res/layout/activity_base_drawer.xml
+++ b/app/src/main/res/layout/activity_base_drawer.xml
@@ -24,6 +24,6 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/drawer_base_header"
-        app:menu="@menu/navigation" />
+        app:menu="@menu/app_navigation" />
 
 </android.support.v4.widget.DrawerLayout>
