--- a/app/src/main/res/layout/activity_recipe_collections.xml
+++ b/app/src/main/res/layout/activity_recipe_collections.xml
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="?android:attr/windowBackground"
-        app:layout_scrollFlags="scroll|enterAlways|snap"
+        app:layout_behavior="com.alsash.reciper.ui.view.behavior.BottomAppearanceBehavior"
         app:menu="@menu/activity_recipe_collections_nav" />
 
 </android.support.design.widget.CoordinatorLayout>
