--- a/app/src/main/res/layout/view_list_group.xml
+++ b/app/src/main/res/layout/view_list_group.xml
@@ -30,7 +30,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:scrollbars="none"
-        app:layoutManager="LinearLayoutManager"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layoutManager="LinearLayoutManager" />
 
 </LinearLayout>
