--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="white">#ffffff</color>
     <color name="white_a20">#33ffffff</color>
     <color name="white_a80">#ccffffff</color>
+    <color name="white_a127">#7fffffff</color>
     <color name="black">#000000</color>
     <color name="black_a054">#8a000000</color>
     <color name="gray_100">#F5F5F5</color>
