--- a/app/src/main/res/layout/card_recipe_front.xml
+++ b/app/src/main/res/layout/card_recipe_front.xml
@@ -28,26 +28,37 @@
                 android:layout_width="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                app:layout_aspectRatio="178%"
+                app:layout_aspectRatio="100%"
                 app:layout_widthPercent="100%"
-                app:srcCompat="@drawable/bg_drawer_header"
+                app:srcCompat="@color/gray_200"
                 tools:ignore="ContentDescription" />
+
+            <ProgressBar
+                android:id="@+id/card_recipe_front_image_bar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:indeterminate="true"
+                android:indeterminateTint="@color/white"
+                tools:targetApi="lollipop" />
 
         </android.support.percent.PercentFrameLayout>
 
         <TextView
             android:id="@+id/card_recipe_front_title"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:maxLines="1"
-            android:text="Recipe title"
+            android:layout_marginTop="8dp"
+            android:fontFamily="cursive"
+            android:gravity="center_horizontal"
+            android:maxLines="2"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textSize="18sp"
+            android:textSize="16sp"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
