--- a/app/src/main/res/layout/view_list_group.xml
+++ b/app/src/main/res/layout/view_list_group.xml
@@ -7,6 +7,12 @@
     android:background="@color/gray_200"
     android:orientation="vertical">
 
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/group_name"
         android:layout_width="match_parent"
@@ -15,6 +21,7 @@
         android:text="Group Name"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         tools:ignore="RtlHardcoded" />
+
 
     <ProgressBar
         android:id="@+id/group_progress"
